# anvil-parser

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
anvil/: __init__.py  _rust.pyi  base_section.py  block.py  chunk.py  empty_chunk.py  empty_region.py  empty_section.py  errors.py  raw_section.py  region.py  utils.py
anvil/legacy/: legacy_blocks.json
benchmarks/: rust_vs_python.py
docs/: api.rst  conf.py
scripts/: check_test_mca.py
src/: block.rs  chunk.rs  errors.rs  lib.rs  nbt.rs  region.rs
tests/: context.py  future_test_structure.md  test_benchmark.py  test_block.py  test_chunk.py  test_empty_chunk.py  test_empty_section.py  test_read_region.py
